--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.2.1",
+    "@mui/x-date-pickers": "^6.2.1",
+    "autoprefixer": "^10.4.3",
     "babel-plugin-styled-components": "^2.1.3",
     "next": "^13.4.6",
     "nextjs-google-analytics": "^2.3.7",
+    "postcss": "^8.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotjar": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.32.1",
     "styled-components": "^5.3.11"
   },
