--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "sharp": "^0.32.1"
+
   },
   "devDependencies": {
     "@netlify/plugin-sitemap": "^0.8.1",
