--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,30 @@
+// {
+//   "presets": [
+//     "next/babel"
+//   ],
+//   "plugins": [
+//     [
+//       "babel-plugin-styled-components",
+//       {
+//         "ssr": true,
+//         "displayName": true,
+//         "minify": true,
+//         "preprocess": true
+//       },
+//       "babel-plugin-root-import"
+//     ]
+//   ]
+// }
+
 {
-  "presets": [
-    "next/babel"
-  ],
+  "presets": ["next/babel"],
   "plugins": [
-    [
-      "babel-plugin-styled-components",
-      {
-        "ssr": true,
-        "displayName": true,
-        "minify": true,
-        "preprocess": true
-      },
-      "babel-plugin-root-import"
-    ]
+    ["babel-plugin-styled-components", {
+      "ssr": true,
+      "displayName": true,
+      "minify": true,
+      "preprocess": true
+    }],
+    "babel-plugin-root-import"
   ]
 }
