--- a/package.json
+++ b/package.json
@@ -1,38 +1,20 @@
 {
-  "name": "sitedesign",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
-    "autoprefixer": "^10.4.3",
-    "babel-plugin-styled-components": "^2.1.3",
-    "blueimp-md5": "^2.19.0",
-    "dayjs": "^1.11.7",
-    "next": "^15.2.2",
-    "nextjs-google-analytics": "^2.3.7",
-    "postcss": "^8.4.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hotjar": "^6.1.0",
-    "react-icons": "^5.5.0",
-    "react-markdown": "^8.0.5",
-    "remark-gfm": "^3.0.1",
-    "sharp": "^0.32.1",
-    "styled-components": "^5.3.11"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.2.4"
   },
   "devDependencies": {
-    "@netlify/plugin-sitemap": "^0.8.1",
-    "babel-plugin-root-import": "^6.6.0",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
